--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -87,7 +87,7 @@ body {
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-btn">
         <li>
-          <%= link_to "", :rel => "post-job", :'data-container' => 'body', :'data-placement' => "bottom", :'data-trigger' => "hover", :'data-toggle' => "tooltip", :title => "Post a job" do %>
+          <%= link_to post_path, :rel => "post-job", :'data-container' => 'body', :'data-placement' => "bottom", :'data-trigger' => "hover", :'data-toggle' => "tooltip", :title => "Post a job" do %>
             <span class="glyphicon glyphicon-briefcase"></span>
           <% end %>
         </li>
