add font link rel

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,13 @@
   <title>Instajob</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="InstaJob is about social career where you can post and seek for a job whether for permanent, temporary, on-the-go or even for internship program. Open to all company and freelancer all over the world.">
-  <meta name="keywords" content="social,career,socialcareer,jobless,seek a job, post a job, startup company, instajob, freelance, freelancer, working, kerja kosong, jawatan kosong, jawatan kosong kerajaan, jawatan kosong swasta, new job, need a job, dream jobs, find job, fresh graduate, jobs looking, job applicant, job position, internship">
+  <meta name="keywords" content="social,career,socialcareer,jobless,seek a job, post a job, startup company, instajob, freelance, freelancer, working, kerja kosong, jawatan kosong, jawatan kosong kerajaan, jawatan kosong swasta, new job, need a job, dream jobs, find job, fresh graduate, jobs looking, job applicant, job position, internship,startup malaysia, startup company, startup apps">
   <meta name="author" content="Instajob">
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/Icon-72@2x.png">
   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/Icon@2x.png">
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/Icon-72.png">
   <link rel="apple-touch-icon-precomposed" sizes="58x58" href="ico/Icon-58@2x.png">
+  <link href='http://fonts.googleapis.com/css?family=Raleway:300,200,100' rel='stylesheet' type='text/css'>
   <%= favicon_link_tag 'favicon.ico' %>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
