--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -1,3 +1,78 @@
 // Place all the styles related to the user controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  padding-top: 75px;
+}
+
+#wrapper {
+  font-size: 90%;
+}
+
+.navbar-nav>li>a {
+  line-height: 34px;
+  padding: 0 12px;
+}
+
+.navbar-btn>li>a {
+  line-height: 49px;
+  padding: 0 12px;
+}
+
+.search_form input[type=search] {
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  width:200px;
+  min-height: 36px;
+  padding: 4px 20px 4px 8px;
+  font-size: 12px;
+  -moz-transition: all .2s linear;
+  -webkit-transition: all .2s linear;
+  transition: all .2s linear;
+}
+ 
+.search_form input[type=search]:focus {
+  width: 500px;
+  border-color: #51a7e8;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1),0 0 5px rgba(81,167,232,0.5);
+  outline: none;
+}
+
+.featurette-divider {
+  margin: 20px 0; /* Space out the Bootstrap <hr> more */
+  border-top: 2px solid #fff;
+  border-top-color: #3498DB;
+}
+
+.media-object {
+  position: relative;
+  float: left;
+  margin-right: 10px;
+  margin-left: -10px;
+}
+
+.media-object {
+  width: 48px;
+  height: 48px;
+}
+
+.media-object img {
+}
+
+.list-group-item-heading {
+  margin-bottom: 5px;
+}
+
+.list-group-item-text {
+  margin-bottom: 1px;
+}
+
+.lead {
+  font-size: 16px;
+}
+
+.numbering {
+  margin-left: 10px;
+}
